Fix spacing

--- a/styles.css
+++ b/styles.css
@@ -543,6 +543,10 @@ h2 {
 h3 {
   font-size: 24px;
   font-weight: bold;
+  margin: 14px 0px 14px 0px;
+}
+
+.tighter-spacing {
   margin: 14px 0px 4px 0px;
 }
 
